# auck_cpp-typesafe_unions

./: .clang-format  .dir-locals.el  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  event.hpp  multivisitor.hpp  overload_set.hpp  state.hpp  static_visitor.tex  svu.cpp  test_multivisitor.cpp  tmp.cpp  variant.hpp  visitor.hpp
include/: multivisitor.hpp  overload_set.hpp  variant.hpp
talk/: .gitignore  latexmkrc
